Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h1>
-<a id="san-francisco-crime-classification-kaggle-competition-using-r-and-random-forest" class="anchor" href="#san-francisco-crime-classification-kaggle-competition-using-r-and-random-forest" aria-hidden="true"><span class="octicon octicon-link"></span></a>San Francisco Crime Classification (Kaggle competition) using R and Random Forest</h1>
+<a id="san-francisco-crime-classification-kaggle-competition-using-spark-and-logistic-regression" class="anchor" href="#san-francisco-crime-classification-kaggle-competition-using-spark-and-logistic-regression" aria-hidden="true"><span class="octicon octicon-link"></span></a>San Francisco Crime Classification (Kaggle competition) using Spark and Logistic Regression</h1>
 
 <h2>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h2>
